--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/backend/package.html
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/backend/package.html
@@ -22,7 +22,7 @@ use the Prover to ask if queries are theorems or not.</p>
 <p>There are three types of terms. The most general is 
 <tt>term_id(a1, ..., an)</tt>, that is, it has an identifier,
 gets applied to a number (possibly 0) of arguments and returns
-a value. It's sort is <tt>t1 x ... x tn -&gt; t</tt>. A constant
+a value. Its sort is <tt>t1 x ... x tn -&gt; t</tt>. A constant
 is just the case <tt>n=0</tt>. Before using a term it has
 to be registered, that is, you have to tell the builder that
 <tt>term_id: t1 x ... x tn -&gt; t</tt> is going to be used. Surely,
