--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/package.html
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/package.html
@@ -8,7 +8,7 @@
 <p>Free as in the verb.</p>
 
 
-<h2>Notes to developers</h2>
+<h2>Note to developers</h2>
 
 <p>If you are interested in contributing code you might find useful
 to know the rules I try to follow while writing code. All the code
