--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/ast/utils/package.html
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/ast/utils/package.html
@@ -1,10 +1,13 @@
 <html>
 <body>
 
-<p>This package includes a pretty-printer and a builder of AST nodes from
-Strings.
+<p>This package defines rather general purpose utilities for working
+with AST: a pretty printer, a String parser, a collector of identifiers,
+and a transformer for performing a set of substitutions.
 </p>
 
+<p>TODO: parsing from strings
+</p>
 
 </body>
 </html>
