--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/package.html
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/package.html
@@ -10,19 +10,17 @@
 
 <h2>Note to developers</h2>
 
-<p>If you are interested in contributing code you might find useful
-to know the rules I try to follow while writing code. All the code
-will be Java 6, written mostly using the
-<a href="http://java.sun.com/docs/codeconv/html/CodeConvTOC.doc.html">Sun Java coding conventions</a>.
-One difference is the use of two space indents (instead of four). No tabs
-shall be used (this is unspecified by Sun). One rule commonly forgot that I care
-about is to "avoid lines longer than 80 characters." OK, enough with the
-boring stuff. Now on to (slightly) less religious decisions. One form
-of external dependency allowed is a <tt>jar</tt> file in the <tt>lib</tt>
-directory. Developers will also need <tt>ant</tt> and <tt>junit</tt>.
-No other external dependency is allowed. The commands <tt>ant</tt>, 
-<tt>ant test</tt>, and <tt>ant doc</tt> should always work in the 
-repository.</p>
+<p>The code is written for Sun's
+Java 6 compiler. It follows the <a
+href="http://java.sun.com/docs/codeconv/html/CodeConvTOC.doc.html">
+Sun Java coding conventions</a>, but with two-spaces indents.
+(According to that, long lines are avoided.) At any point in
+time a user should be able to checkout and run <tt>ant</tt> and
+<tt>ant doc</tt> without seeing errors or warnings. The command
+<tt>ant test</tt> is allowed to fail from time to time. All
+the libraries in use appear as jar files under the directory
+<tt>lib</tt>. No generated file shall be under version control.
+</p>
 
 </body>
 
