--- a/src/freeboogie/trunk/update_site/index.html
+++ b/src/freeboogie/trunk/update_site/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>FreeBoogieUpdateSite</title>
+<title>Freeboogie update site</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>@import url("web/site.css");</style>
 <script type="text/javascript">
